# mlops

./: README.md  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.dvc/: config
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/mlops_cookiecutter/: greetings.py  iris_classifier.py  svm.ckpt  tasks.py
tests/: test_data.py
